# sample-cpp-repo

./: README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
